<resources>
    <string name="app_name">Lizart2</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_inicia_sesion">IniciaSesion</string>
    <string name="inicio_sesion">Inicia sesión</string>
    <string name="tag_nom_usu">Nombre de usuario</string>
    <string name="tag_pass_usu">Contraseña</string>
    <string name="title_activity_configuracion">Configuracion</string>

    <string name="hello_world">Hello world!</string>
    <string name="tag_email">Email</string>
    <string name="tag_descripcion">Descripción</string>
    <string name="tag_sacaFoto">Sacar foto</string>
    <string name="tag_botonActualizaTodo">Actualizar información general</string>
    <string name="tag_repite_pass">Repetir contraseña</string>
    <string name="tag_actualiza_pass">Actualizar contraseña</string>
    <string name="tag_cerrar_sesion">Cerrar sesión</string>
    <string name="tag_eliminar_cuenta">Eliminar cuenta</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_configuracion_uil">configuracionUIL</string>
    <string name="title_activity_foto_entera">FotoEntera</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_comentar">Comentar</string>
    <string name="btnEnviar">Enviar</string>
    <string name="title_activity_usuario_entero">UsuarioEntero</string>
    <string name="tvFotos">Fotografías</string>
    <string name="tvSiguiendo">Siguiendo</string>
    <string name="tvSeguidores">Seguidores</string>
    <string name="title_activity_eleccion">Eleccion</string>
    <string name="titulo">Lizart</string>
    <string name="descripcion">Tu red social de fotografía artística</string>
    <string name="title_activity_registro">Registro</string>
    <string name="registro">Registrar</string>
</resources>
