<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <include
                    layout="@layout/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tag_nom_usu"
                            android:id="@+id/tagNomUsuNuevo" />

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/etNomUsuNuevo"
                            android:inputType="text" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tag_email"
                            android:id="@+id/textView3" />

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:ems="10"
                            android:id="@+id/etNuevoEmail" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tag_descripcion"
                            android:id="@+id/textView4" />

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/etNuevaDesc" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:id="@+id/ivFotoPerfilNueva"
                            android:background="@color/accent" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tag_sacaFoto"
                            android:id="@+id/btnSacaFotoPerfil" />
                    </LinearLayout>

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_botonActualizaTodo"
                        android:id="@+id/btnActualizaInfoGeneral" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tag_pass_usu"
                            android:id="@+id/textView5" />

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:ems="10"
                            android:id="@+id/etPassNueva1" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tag_repite_pass"
                            android:id="@+id/textView6" />

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:ems="10"
                            android:id="@+id/etPassNueva2" />
                    </LinearLayout>

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_actualiza_pass"
                        android:id="@+id/btnActualizaPass" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_cerrar_sesion"
                        android:id="@+id/btnCerrarSesion" />
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>