<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.franciscopolov.lizart.lizart2.UsuarioEntero">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="64dip"
            android:layout_height="64dip"
            android:id="@+id/FotoPerfilUsu"
            android:background="@color/primary"
            android:layout_gravity="center"
            android:layout_marginTop="30dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/NombreUsu"
            android:layout_gravity="center"
            android:layout_marginTop="5dip" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/DescripcionUsu"
            android:layout_marginTop="10dip"
            android:layout_gravity="center"
            android:layout_marginBottom="30dip"
            android:textAlignment="center"
            android:layout_marginLeft="60dip"
            android:layout_marginRight="60dip"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_material_dark"
        android:layout_marginBottom="5dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tvFotos"
                    android:id="@+id/textView10"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tvSiguiendo"
                    android:id="@+id/textView11"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tvSeguidores"
                    android:id="@+id/textView12"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dip"
                android:layout_marginRight="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/tvNumFotos"
                    android:text="1"
                    android:layout_gravity="right" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/tvNumSiguiendo"
                    android:text="1"
                    android:layout_gravity="right" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/tvNumSeguidores"
                    android:text="1"
                    android:layout_gravity="right" />
            </TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnUsuario"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp" />

        </TableLayout>

    </LinearLayout>

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gridFotosUser"
        android:numColumns="3" />

</LinearLayout>
